# lightning-boost

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENCE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: explanation.md  gen_ref_pages.py  how-to-guides.md  index.md  reference.md  requirements.txt
docs/stylesheets/: extra.css
docs/tutorials/: cross-validation.md  index.md  mnist.md
examples/mnist/: config.yaml  main.py  plot.py
examples/mnist/data/datamodules/: __init__.py  mnist_datamodule.py
examples/mnist/data/datasets/: __init__.py  mnist_dataset.py
examples/mnist/models/: mnist_model.py
examples/mnist/modules/metrics/: __init__.py
examples/mnist/modules/preprocessing/: __init__.py  mnist_collator.py  mnist_transform.py
examples/mnist/systems/: __init__.py  mnist_system.py
lightning_boost/cli/: __init__.py  cli.py
lightning_boost/core/callbacks/: __init__.py  model_summary.py
lightning_boost/data/datamodules/: __init__.py  base_datamodule.py
lightning_boost/data/datasets/: base_dataset.py
lightning_boost/models/: base_model.py
lightning_boost/modules/loss/: __init__.py  task_loss.py
lightning_boost/modules/metrics/: __init__.py  task_metric.py
lightning_boost/modules/optim/: __init__.py  lr_scheduling_policy.py
lightning_boost/modules/preprocessing/: __init__.py  base_collator.py  base_transform.py  composite_transform.py
lightning_boost/systems/: base_system.py  utils.py
tests/: conftest.py  utils.py
tests/dummy/data/datamodules/: __init__.py  dummy_datamodule.py
tests/dummy/data/datasets/: __init__.py  dummy_dataset.py
tests/dummy/models/: __init__.py  dummy_model.py
tests/dummy/modules/loss/: __init__.py
tests/dummy/modules/metrics/: __init__.py
tests/dummy/modules/preprocessing/: __init__.py  dummy_collator.py  dummy_transform.py
tests/dummy/systems/: __init__.py  dummy_system.py
tests/system_tests/: config.yaml  main.py  test_main.py
tests/unit_tests/cli/: test_cli.py
tests/unit_tests/data/datamodules/: test_datamodule.py
tests/unit_tests/data/datasets/: test_dataset.py
tests/unit_tests/models/: test_model.py
tests/unit_tests/modules/loss/: test_loss.py
tests/unit_tests/modules/metrics/: test_metric.py
tests/unit_tests/modules/optim/: test_lr_scheduling_policy.py
tests/unit_tests/modules/preprocessing/: test_collator.py  test_transform.py
tests/unit_tests/systems/: test_system.py  test_utils.py
