[tool.poetry]
name = "lightning-boost"
version = "v1.0.2"
description = "PyTorch Lightning extension for faster model development."
authors = ["Fabrice von der Lehr <fabrice.vonderlehr222@gmail.com>"]
license = "mit"
readme = "README.md"
repository = "https://github.com/f-lair/lightning-boost"
documentation = "https://lightning-boost.readthedocs.io/en/latest/"
packages = [{include = "lightning_boost"}]

[tool.poetry.dependencies]
python = "^3.10"
lightning = "^2.0.7"
torchmetrics = "^1.0.3"
inflection = "^0.5.1"
jsonargparse = {version = "^4.23.1", extras = ["signatures"]}
tensorboard = "^2.14.0"
torch = {version = "^2.0.1", source = "torch"}
torchvision = {version = "^0.15.2", source = "torch"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
scriv = {extras = ["toml"], version = "^1.3.1"}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.scriv]
format = "md"
version = "literal: pyproject.toml: tool.poetry.version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
