[tool.poetry]
name = "lightning-boost"
version = "v2.0.1"
description = "PyTorch Lightning extension for faster model development."
authors = ["Fabrice von der Lehr <fabrice.vonderlehr222@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/f-lair/lightning-boost"
documentation = "https://lightning-boost.readthedocs.io/en/latest/"
packages = [{include = "lightning_boost"}]

[tool.poetry.dependencies]
python = "^3.10"
lightning = "^2.0.8"
torchmetrics = "^1.1.1"
inflection = "^0.5.1"
jsonargparse = {version = "^4.24.1", extras = ["signatures"]}
tensorboard = "^2.14.0"
torch = {version = "^2.0.1", source = "torch"}
torchvision = {version = "^0.15.2", source = "torch"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
scriv = {extras = ["toml"], version = "^1.3.1"}


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
mkdocs-autorefs = "^0.5.0"
mkdocs-exclude-search = "^0.6.5"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-material = "^9.2.8"
mkdocs-material-extensions = "^1.1.1"
mkdocs-section-index = "^0.3.6"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.6.2"
pygments = "^2.16.1"
pymdown-extensions = "^10.3"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.scriv]
format = "md"
version = "literal: pyproject.toml: tool.poetry.version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
